examples/type_system/failing/202_hm_pure_caller_missing_io_e400.flx
// E400: pure function calls a function that requires IO.
// Verifies that the HM-layer effect mismatch path emits a dedicated
// E400 diagnostic naming the missing effect directly, not a confusing
// "() -> ()" type-unification message.

fn write_log(msg: String) -> Unit with IO {
    print(msg)
}

fn process() -> Int {
    write_log("processing")
    42
}
